; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wan/extr_dlci.c_dlci_change_mtu.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wan/extr_dlci.c_dlci_change_mtu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.dlci_local = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32)* @dlci_change_mtu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dlci_change_mtu(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.dlci_local*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.dlci_local* @netdev_priv(%struct.net_device* %6)
  store %struct.dlci_local* %7, %struct.dlci_local** %5, align 8
  %8 = load %struct.dlci_local*, %struct.dlci_local** %5, align 8
  %9 = getelementptr inbounds %struct.dlci_local, %struct.dlci_local* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @dev_set_mtu(i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local %struct.dlci_local* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @dev_set_mtu(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
